@@ -138,7 +138,7 @@ void jswrap_onewire_select(JsVar *parent, JsVar *rom) {
   Pin pin = onewire_getpin(parent);
   if (!jshIsPinValid(pin)) return;
   if (!jsvIsString(rom) || jsvGetStringLength(rom)!=16) {
-    jsWarn("Invalid OneWire device address");
+    jsExceptionHere(JSET_TYPEERROR, "Invalid OneWire device address %q", rom);
     return;
   }
 
